added different skills sections

--- a/src/Components/TechStacks/TechStacks.module.css
+++ b/src/Components/TechStacks/TechStacks.module.css
@@ -1,15 +1,38 @@
+.skills {
+  padding:1rem;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
 .container {
-  display: grid;
-  grid-template-columns: auto auto auto auto;
+  display: flex;
+ flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   margin-top: 50px;
 }
+.techText{
+  color:lightgray;
+  font-style: italic;
+}
+.frontend {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-top:1rem;
+  border-radius: 1rem;
+}
+.backend {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-top:1rem;
+  border-radius: 1rem;
+}
+.others {
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-top:1rem;
+  border-radius: 1rem;
+}
 
 .logoWrapper {
   font-size: 20px;
-  width: 100px;
-  height: 100px;
+  width: 80px;
+  height: 80px;
   border-radius: 15px;
   margin: 10px;
   display: flex;
@@ -100,7 +123,6 @@
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto auto;
   }
-
 }
 @media only screen and (max-width: 450px) {
   .container {
