--- a/src/Components/TechStacks/TechStacks.module.css
+++ b/src/Components/TechStacks/TechStacks.module.css
@@ -1,31 +1,31 @@
 .skills {
-  padding:1rem;
+  padding: 1rem;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 .container {
   display: flex;
- flex-wrap: wrap;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   margin-top: 50px;
 }
-.techText{
-  color:lightgray;
+.techText {
+  color: lightgray;
   font-style: italic;
 }
 .frontend {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  margin-top:1rem;
+  margin-top: 1rem;
   border-radius: 1rem;
 }
 .backend {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  margin-top:1rem;
+  margin-top: 1rem;
   border-radius: 1rem;
 }
 .others {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  margin-top:1rem;
+  margin-top: 1rem;
   border-radius: 1rem;
 }
 
@@ -42,15 +42,7 @@
   padding: 10px;
   color: cornsilk;
   transition: 0.5s;
-  clip-path: polygon(
-    50% 0%,
-    90% 20%,
-    100% 87%,
-    75% 100%,
-    25% 100%,
-    0 88%,
-    10% 20%
-  );
+  clip-path: polygon(10% 10%, 75% 0%, 110% 70%, 75% 100%, -10% 100%);
 }
 .logoWrapper:hover {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
