--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -1,12 +1,13 @@
 .container {
-	width: 70vw;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	width: 60vw;
+	/* display: flex;
+	justify-content: space-center;
+	align-items: center; */
 	margin: auto;
 	border-radius: 15px;
 	padding: 10px 10px;
 	backdrop-filter: blur(5px);
+	font-family: sans-serif;
 }
 .first {
 	width: 40%;
@@ -34,8 +35,7 @@
 }
 .aboutMe {
 	font-weight: 400;
-	font-family: var(--font-sans);
-	font-family: 'Roboto Mono', monospace;
+	font-family: sans-serif;
 	font-size: 1.2rem;
 	padding-right: 20px;
 }
