--- a/src/Components/Navbar/Navbar.module.css
+++ b/src/Components/Navbar/Navbar.module.css
@@ -1,10 +1,10 @@
 .navContainer {
     width: 100%;
     padding: 15px;
-    position: fixed;
+    position: sticky !important;
     z-index: 20;
     top: 0;
-    transition: top 0.6s;
+    /* transition: top 0.1s; */
   }
   .logo {
     position: relative;
@@ -12,13 +12,14 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    font-weight: bold;
   }
-  .logo img {
+  /* .logo img {
     position: absolute;
     width: 45px;
     border-radius: 40px;
-    animation: revolve 2s infinite;
-  }
+    animation: revolve 2s 1;
+  } */
   
   @keyframes revolve {
     from {
