--- a/src/Components/TechStacks/TechStacks.module.css
+++ b/src/Components/TechStacks/TechStacks.module.css
@@ -16,17 +16,23 @@
 .frontend {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   margin-top: 1rem;
+  width:80vw;
+  margin:auto;
   border-radius: 1rem;
 }
 .backend {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  margin-top: 1rem;
   border-radius: 1rem;
+  width:80vw;
+  margin:auto;
+  margin-top: 1rem;
 }
 .others {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  margin-top: 1rem;
+  width:80vw;
+  margin:auto;
   border-radius: 1rem;
+  margin-top: 1rem;
 }
 
 .logoWrapper {
@@ -42,7 +48,17 @@
   padding: 10px;
   color: cornsilk;
   transition: 0.5s;
-  clip-path: polygon(10% 10%, 75% 0%, 110% 70%, 75% 100%, -10% 100%);
+  position: relative;
+  /* clip-path: polygon(10% 10%, 75% 0%, 110% 70%, 75% 100%, -10% 100%); */
+}
+.logoWrapper span{
+  font-size: 14px;
+  font-weight: 400;
+  padding:5px;
+  position:absolute;
+  color:gray;
+  top:5px;
+  font-family: sans-serif;
 }
 .logoWrapper:hover {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
@@ -97,16 +113,32 @@
   font-size: 1.1em;
   margin: 5px !important;
 }
+.githubInfo{
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  align-items: center;
+  gap:20px;
+  margin:20px;
+}
 .githubcalender {
   width: fit-content;
   margin: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
 }
+.githubstats{
+  width:fit-content;
+  margin: auto;
+}
+.githubstats img{
+  width: 100%;
+}
+
 @media only screen and (max-width: 1150px) {
   .container {
     grid-template-columns: auto auto auto auto;
     grid-template-rows: auto auto;
+  }
+  .githubInfo{
+    display: block;
   }
 }
 
@@ -115,10 +147,16 @@
     grid-template-columns: auto auto auto;
     grid-template-rows: auto auto auto;
   }
+  .githubInfo{
+    display: block;
+  }
 }
 @media only screen and (max-width: 450px) {
   .container {
     grid-template-columns: auto auto;
     grid-template-rows: auto auto auto auto;
+  }
+  .githubInfo{
+    display: block;
   }
 }
