moved about me to center

--- a/src/Components/About/About.module.css
+++ b/src/Components/About/About.module.css
@@ -1,23 +1,16 @@
 .container {
 	width: 60vw;
-	/* display: flex;
+	display: flex;
 	justify-content: space-center;
-	align-items: center; */
+	align-items: center;
 	margin: auto;
 	border-radius: 15px;
 	padding: 10px 10px;
 	backdrop-filter: blur(5px);
 	font-family: sans-serif;
 }
-.first {
-	width: 40%;
-	display: flex;
-}
-.first img {
-	width: 95%;
-}
 .second {
-	width: 55%;
+	width: 100%;
 	text-align: justify;
 }
 .heading {
