--- a/src/Components/TechStacks/TechStacks.module.css
+++ b/src/Components/TechStacks/TechStacks.module.css
@@ -10,7 +10,8 @@
   margin-top: 50px;
 }
 .techText {
-  color: lightgray;
+  color: black;
+  font-size: 18px;
   font-style: italic;
 }
 .frontend {
